<?xml version="1.0"?>
<package format="2">
  <name>stage_msgs</name>
  <version>0.0.0</version>
  <description>ROS message definitions for interfacing with stage_ros.</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/stage_msgs</url> -->

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
